--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,14 @@ upload:
   enabled: true
   requireAuth: false         # turn off for quick testing, then re-enable
   # allowList: []
+  allowedMimeTypes:
+    - "image/jpeg"
+    - "image/jpg"
+    - "image/png"
+    - "image/gif"
+    - "image/webp"
+    - "video/mp4"
+    - "video/webm"
 
 media:
   enabled: true
